--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -67,6 +67,8 @@ header .menu li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 header .menu li:hover a {
@@ -86,8 +88,52 @@ header .menu a {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   /* 1f1534-hyfen */
-  color: #1f1534;
   padding: 10px;
   opacity: 0.5;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+header .menu a:hover {
+  -webkit-animation: move 0.5s;
+          animation: move 0.5s;
+}
+
+@-webkit-keyframes move {
+  0% {
+    -webkit-transform: rotate(5deg);
+            transform: rotate(5deg);
+  }
+  40% {
+    -webkit-transform: rotate(5deg);
+            transform: rotate(5deg);
+  }
+  60% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+@keyframes move {
+  0% {
+    -webkit-transform: rotate(5deg);
+            transform: rotate(5deg);
+  }
+  40% {
+    -webkit-transform: rotate(5deg);
+            transform: rotate(5deg);
+  }
+  60% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
 }
 /*# sourceMappingURL=Header.css.map */
