--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,6 +11,10 @@ header {
   padding: 10px 0;
 }
 
+header .burger-menu {
+  display: none;
+}
+
 header .logo {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -134,6 +138,40 @@ header .menu a:hover {
   100% {
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
+  }
+}
+
+@media screen and (max-width: 872px) {
+  .burger-menu {
+    display: block !important;
+  }
+  .menu {
+    position: fixed;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    overflow: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-color: #ec32be;
+    width: 100%;
+    height: 100vh;
+    top: 10%;
+    left: -100%;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+    z-index: 1000;
+  }
+  .menu a {
+    color: #fff;
+    font-weight: bold !important;
+    font-size: 25px !important;
+    margin-top: 20px !important;
+  }
+  .resp-menu-active {
+    left: 0% !important;
   }
 }
 /*# sourceMappingURL=Header.css.map */
