--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,6 +3,9 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 10px 0;
+  .burger-menu {
+    display: none;
+  }
   .logo {
     display: flex;
     align-items: center;
@@ -78,5 +81,33 @@ header {
   }
   100% {
     transform: rotate(0deg);
+  }
+}
+
+@media screen and(max-width:872px) {
+  .burger-menu {
+    display: block !important;
+  }
+  .menu {
+    position: fixed;
+    display: flex;
+    overflow: none;
+    flex-direction: column;
+    background-color: rgb(236, 50, 190);
+    width: 100%;
+    height: 100vh;
+    top: 10%;
+    left: -100%;
+    transition: all 0.5s;
+    z-index: 1000;
+    a {
+      color: #fff;
+      font-weight: bold !important;
+      font-size: 25px !important;
+      margin-top: 20px !important;
+    }
+  }
+  .resp-menu-active {
+    left: 0% !important;
   }
 }
