--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -71,3 +71,40 @@
     }
   }
 }
+
+@media screen and(max-width:1091px) {
+  .home-cont {
+    display: flex;
+    justify-content: center !important;
+    align-items: center !important;
+  }
+  .home-left-side {
+    margin: 60px 0;
+    padding: 0;
+    .title {
+      font-size: 43px !important;
+    }
+    .text {
+      margin: 30px 0 !important;
+      font-size: 19px !important;
+    }
+  }
+}
+
+@media screen and(max-width:582px) {
+  .home-left-side {
+    width: 500px !important;
+    .title {
+      font-size: 40px !important;
+    }
+  }
+}
+
+@media screen and(max-width:496px) {
+  .home-left-side {
+    width: 460px !important;
+    .title {
+      font-size: 39px !important;
+    }
+  }
+}
