about us completed

--- a/src/components/Services/ServicesCardItem/ServicesCardItem.scss
+++ b/src/components/Services/ServicesCardItem/ServicesCardItem.scss
@@ -13,7 +13,7 @@
   transition: all 0.3s;
   cursor: pointer;
   &:hover {
-    background-color: rgb(236, 50, 190);
+    background-color: #458ff6;
   }
   &:hover > .card-title {
     color: #ffffff;
