--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,18 +1,16 @@
 .about {
   width: 100%;
-  padding: 60px 0;
 }
 
 .about .about-cont {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  width: 100%;
-  padding: 0;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .about .about-cont .up {
@@ -20,8 +18,10 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .about .about-cont .up .left-side {
@@ -31,14 +31,14 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: left;
-  -ms-flex-align: left;
-  align-items: left;
+      -ms-flex-align: left;
+          align-items: left;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .about .about-cont .up .left-side .up-left-title {
@@ -77,17 +77,17 @@
   height: 56px;
   border: 1.4px solid #458ff6;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   border-radius: 55px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-decoration: none;
   font-family: "Mulish";
   font-style: normal;
@@ -96,7 +96,7 @@
   line-height: 60px;
   /* identical to box height, or 333% */
   -webkit-box-shadow: inset 0 0 0 0 #458ff6;
-  box-shadow: inset 0 0 0 0 #458ff6;
+          box-shadow: inset 0 0 0 0 #458ff6;
   color: #458ff6;
   margin: 10px 0;
   mix-blend-mode: normal;
@@ -106,7 +106,7 @@
 
 .about .about-cont .up .left-side .up-left-button:hover {
   -webkit-box-shadow: inset 300px 0 0 0 #458ff6;
-  box-shadow: inset 300px 0 0 0 #458ff6;
+          box-shadow: inset 300px 0 0 0 #458ff6;
   color: #fff;
 }
 
@@ -117,11 +117,11 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .about .about-cont .up .right-side img {
@@ -133,11 +133,13 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .about .about-cont .down .down-left-side {
@@ -147,11 +149,11 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .about .about-cont .down .down-left-side img {
@@ -160,18 +162,18 @@
 
 .about .about-cont .down .down-right-side {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   width: 481px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: left;
-  -ms-flex-align: left;
-  align-items: left;
+      -ms-flex-align: left;
+          align-items: left;
 }
 
 .about .about-cont .down .down-right-side .down-right-title {
@@ -209,17 +211,17 @@
   height: 56px;
   border: 1.4px solid #ec32be;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   border-radius: 55px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-decoration: none;
   margin: 10px 0;
   font-family: "Mulish";
@@ -233,15 +235,28 @@
   color: #ec32be;
   mix-blend-mode: normal;
   -webkit-box-shadow: inset 0 0 0 0 #ec32be;
-  box-shadow: inset 0 0 0 0 #ec32be;
+          box-shadow: inset 0 0 0 0 #ec32be;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
 }
 
 .about .about-cont .down .down-right-side .download-button:hover {
   -webkit-box-shadow: inset -300px 0px 0px 0px #ec32be;
-  box-shadow: inset -300px 0px 0px 0px #ec32be;
+          box-shadow: inset -300px 0px 0px 0px #ec32be;
   border: 1px solid #ec32be;
   color: #fff;
+}
+
+@media screen and (max-width: 1053px) {
+  .up {
+    margin-top: 50px;
+  }
+  .up .right-side {
+    display: none !important;
+    background-color: red;
+  }
+  .up .right-side img {
+    display: none;
+  }
 }
 /*# sourceMappingURL=About.css.map */
