--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,19 +1,19 @@
 .about {
   width: 100%;
-  height: 100vh;
 
   .about-cont {
     display: flex;
-    flex-direction: column;
     width: 100%;
-    padding: 0;
+    flex-direction: column;
     .up {
       display: flex;
       justify-content: space-between;
+      flex-wrap: wrap;
 
       .left-side {
         width: 481px;
         display: flex;
+
         flex-direction: column;
         align-items: left;
         justify-content: center;
@@ -90,6 +90,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      flex-wrap: wrap;
       .down-left-side {
         width: 550px;
         height: 477px;
@@ -170,6 +171,19 @@
             color: #fff;
           }
         }
+      }
+    }
+  }
+}
+
+@media screen and(max-width:1053px) {
+  .up {
+    margin-top: 50px;
+    .right-side {
+      display: none !important;
+      background-color: red;
+      img {
+        display: none;
       }
     }
   }
