--- a/src/components/About/AboutCard/AboutCard.scss
+++ b/src/components/About/AboutCard/AboutCard.scss
@@ -5,6 +5,7 @@
   border-radius: 24px;
   margin: 0 auto;
   height: 425px;
+  margin-bottom: 30px;
   padding: 30px 0;
   display: flex;
   flex-wrap: wrap;
@@ -34,12 +35,13 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    width: 900px;
-    height: 200px;
+    width: 80vw;
     .about-card-left {
       display: flex;
       flex-wrap: wrap;
       align-items: center;
+      width: 270px;
+
       .about-card-img {
         width: 141px;
         height: 141px;
@@ -121,5 +123,74 @@
       color: #fff !important;
       cursor: pointer;
     }
+  }
+}
+
+@media screen and (max-width: 967px) {
+  .about-card {
+    height: 400px !important;
+  }
+}
+
+@media screen and (max-width: 907px) {
+  .about-card {
+    height: 590px !important;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .about-card-manin-content {
+    margin-bottom: 120px;
+  }
+}
+
+@media screen and (max-width: 503px) {
+  .about-card {
+    height: 670px !important;
+  }
+  .about-card-title {
+    font-size: 30px !important;
+  }
+  .about-card-name {
+    p {
+      font-size: 15px !important;
+    }
+  }
+}
+
+@media screen and (max-width: 437px) {
+  .about-card {
+    height: 750px !important;
+  }
+}
+@media screen and (max-width: 429px) {
+  .about-card-left {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 891px) {
+  .about-card-manin-content {
+    justify-content: center !important;
+  }
+  .about-card-name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 867px) {
+  .about-card-left {
+    margin: 25px 0;
+  }
+}
+
+@media screen and (max-width: 541px) {
+  .about-card-title {
+    display: flex;
+    justify-content: center !important ;
+    text-align: center !important;
   }
 }
